; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_tape_3590.c_tape_3590_erp_succeded.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_tape_3590.c_tape_3590_erp_succeded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tape_device = type { i32 }
%struct.tape_request = type { i64 }

@.str = private unnamed_addr constant [34 x i8] c"Error Recovery successful for %s\0A\00", align 1
@tape_op_verbose = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tape_device*, %struct.tape_request*)* @tape_3590_erp_succeded to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tape_3590_erp_succeded(%struct.tape_device* %0, %struct.tape_request* %1) #0 {
  %3 = alloca %struct.tape_device*, align 8
  %4 = alloca %struct.tape_request*, align 8
  store %struct.tape_device* %0, %struct.tape_device** %3, align 8
  store %struct.tape_request* %1, %struct.tape_request** %4, align 8
  %5 = load i32*, i32** @tape_op_verbose, align 8
  %6 = load %struct.tape_request*, %struct.tape_request** %4, align 8
  %7 = getelementptr inbounds %struct.tape_request, %struct.tape_request* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = getelementptr inbounds i32, i32* %5, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @DBF_EVENT(i32 3, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load %struct.tape_device*, %struct.tape_device** %3, align 8
  %13 = load %struct.tape_request*, %struct.tape_request** %4, align 8
  %14 = call i32 @tape_3590_done(%struct.tape_device* %12, %struct.tape_request* %13)
  ret i32 %14
}

declare dso_local i32 @DBF_EVENT(i32, i8*, i32) #1

declare dso_local i32 @tape_3590_done(%struct.tape_device*, %struct.tape_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
